<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorptj"
    android:id="@+id/relativeConnectLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="examensarbete.diacert_android.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/q4Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Fråga fyra"/>

        <TextView
            android:id="@+id/q41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/q4Title"
            android:text="@string/q4t"/>
        <RelativeLayout
            android:id="@+id/q4layout"
            android:layout_below="@id/q41"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/qa41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/qa41"/>
            <CheckBox
                android:id="@+id/qa42"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textSize="20dp"
                android:layout_below="@id/qa41"
                android:layout_gravity="left"
                android:text="@string/qa42"/>
            <CheckBox
                android:id="@+id/qa43"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textSize="20dp"
                android:layout_below="@id/qa42"
                android:layout_gravity="left"
                android:text="@string/qa43"/>
            <CheckBox
                android:id="@+id/qa44"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textSize="20dp"
                android:layout_below="@id/qa43"
                android:layout_gravity="left"
                android:text="@string/qa44"/>
            <CheckBox
                android:id="@+id/qa45"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textSize="20dp"
                android:layout_below="@id/qa44"
                android:layout_gravity="left"
                android:text="@string/qa45"/>


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>